plugins {
    id 'com.android.application'
    id 'kotlin-android'
    id 'kotlin-kapt'
    id 'dagger.hilt.android.plugin'
    id 'com.google.gms.google-services'
    id 'kotlin-parcelize'
    id 'kotlinx-serialization'
}

android {
    compileSdk 33  // ここを33に更新

    defaultConfig {
        applicationId "com.pi12a082.hf21"
        minSdk 23
        targetSdk 33  // こちらも、ターゲットSDKバージョンを33に更新
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
        vectorDrawables {
            useSupportLibrary true
        }

        packagingOptions {
            exclude 'META-INF/DEPENDENCIES'
            exclude 'META-INF/LICENSE'
            exclude 'META-INF/LICENSE.txt'
            exclude 'META-INF/NOTICE'
        }

        lintOptions {
            disable 'UnusedMaterialScaffoldPaddingParameter'
        }
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }
    kotlinOptions {
        jvmTarget = '17'
//        freeCompilerArgs += ['-Xuse-ir', '--add-exports', 'jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED']
    }
    buildFeatures {
        compose true
    }
    composeOptions {
        kotlinCompilerExtensionVersion '1.3.2'  // 最新のComposeコンパイラバージョン
    }
    packagingOptions {
        resources {
            excludes += '/META-INF/{AL2.0,LGPL2.1}'
        }
    }
    namespace 'com.pi12a082.hf21'
}

ext {
    compose_version = '1.3.0'  // Composeのバージョンを定義
    hilt_version = '2.44'  // Hiltのバージョンを定義
    accompanist_version = '0.23.0'  // Accompanistのバージョンを定義
    nav_version = '2.5.0'  // Navigation Composeのバージョンを定義
}

dependencies {
    // 基本的な依存関係
    implementation 'androidx.core:core-ktx:1.9.0'
    implementation 'androidx.appcompat:appcompat:1.5.0'
    implementation 'com.google.android.material:material:1.6.0'

    // Compose ライブラリ
    implementation "androidx.compose.ui:ui:$compose_version"
    implementation "androidx.compose.material:material:$compose_version"
    implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
    implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
    implementation 'androidx.activity:activity-compose:1.5.0'
    debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"

    // Hilt
    implementation("com.google.dagger:hilt-android:$hilt_version")
    kapt("com.google.dagger:hilt-android-compiler:$hilt_version")
    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'

    // Retrofit & KotlinX Serialization
    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
    implementation("com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter:0.8.0")
    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.5.0"

    // Accompanist ライブラリ
    implementation "com.google.accompanist:accompanist-insets:$accompanist_version"
    implementation "com.google.accompanist:accompanist-systemuicontroller:$accompanist_version"
    implementation "com.google.accompanist:accompanist-pager:$accompanist_version"
    implementation "com.google.accompanist:accompanist-pager-indicators:$accompanist_version"

    // Navigation Compose
    implementation("androidx.navigation:navigation-compose:$nav_version")

    // Firebase Auth
    implementation platform('com.google.firebase:firebase-bom:29.0.0')
    implementation 'com.google.firebase:firebase-auth-ktx'

    // Coroutine ライブラリ
    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0")
    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0")
    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.6.0")

    // その他のライブラリ
    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"

    // Coil の依存関係（バージョンは最新のものを使用）
    implementation("io.coil-kt:coil-compose:2.2.2") // Jetpack Compose 用
    implementation("io.coil-kt:coil:2.2.2") // 一般的な使用

    // Google Sign-In APIの依存関係
    implementation 'com.google.android.gms:play-services-auth:20.7.0'

    // Kotlin standard library
    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.8.10"  // 最新バージョンに統一

    implementation 'com.google.maps.android:maps-compose:2.6.0' // Google Maps Composeを追加
    implementation 'com.google.android.gms:play-services-maps:17.0.1' // Maps SDK
}

configurations.all {
    resolutionStrategy {
        force 'com.google.android.gms:play-services-auth:20.7.0'
        force 'com.google.firebase:firebase-auth-ktx:21.0.5'
        force 'com.google.accompanist:accompanist-datepicker:0.24.13-rc' // 強制的にバージョンを指定
    }
}

configurations.all {
    resolutionStrategy {
        force 'org.jetbrains.kotlin:kotlin-stdlib:1.8.10'  // 最新バージョンを強制
        force 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.8.10'  // 最新バージョンを強制
        force 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.8.10'  // 最新バージョンを強制
    }
}

tasks.withType(JavaCompile) {
    options.forkOptions.jvmArgs += [
            '--add-exports', 'jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED'
    ]
}

tasks.whenTaskAdded { task ->
    if (task.name == 'mapDebugSourceSetPaths') {
        task.dependsOn ':app:processDebugGoogleServices'
    }
}
